<resources>
    <string name="app_name">Climat Lab Service</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="ongoing_notification_channel_id">ongoing_notification_channel_id</string>
    <string name="instructions_url">https://drive.google.com/drive/folders/19Kl0Ok40-2yYJaCQQERtSZToSFSpdQJb?usp=sharing</string>

    <!--Common strings-->
    <string name="loading_message">Загрузка...</string>
    <string name="error">Ошибка</string>

    <!--Login screen-->
    <string name="app_title">Лаборатория\nклимата</string>
    <string name="laclimat_ru">laclimat.ru</string>
    <string name="phone">Телефон</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>

    <!--Map screen-->
    <string name="title_activity_map">Карта заявок</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_refresh">Обновить</string>
    <string name="request_updates_message">Заявки обновляются…</string>

    <!--Drawer-->
    <string name="nav_menu_requests">Мои заявки</string>
    <string name="nav_menu_all_requests">Все заявки</string>
    <string name="nav_menu_in_work">В работе</string>
    <string name="nav_menu_map">Карта</string>
    <string name="nav_instructions">Мастерская</string>
    <string name="nav_menu_exit">Выйти</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="client_label">Клиент:</string>
    <string name="office_label">Офис:</string>
    <string name="date_label">Дата выезда:</string>
    <string name="reserve_contact">Доп. контакт:</string>
    <string name="reserve_address">Доп. адрес:</string>
    <string name="contract_date_number">Дата/№ договора:</string>
    <string name="equipment_label">Оборудование:</string>
    <string name="address_label">Адрес:</string>
    <string name="address_details_label">Доп адрес:</string>
    <string name="type_label">Тип:</string>
    <string name="description_label">Описание:</string>
    <string name="comment_label">Комментарий:</string>
    <string name="more_label">Ещё:</string>
    <string name="accept_request_button_label">Принять</string>
    <string name="cancel_request_button_label">Отказаться</string>

    <!--Requests list screen-->
    <string name="title_activity_requests">Заявки</string>
    <string name="requests_filter_new">Новые</string>
    <string name="requests_filter_in_work">В работе</string>
    <string name="requests_filter_cancelled">Отмененные</string>

    <!--Request types-->
    <string name="request_type_mounting">Монтаж</string>
    <string name="request_type_service">Обслуживание</string>
    <string name="request_type_order">Покупка</string>
    <string name="request_not_found_error_message">Заявка не найдена</string>

    <!-- Request report-->
    <string name="request_report_activity_title">Акт</string>
    <string name="boilerTitle">Котел</string>
    <string name="modelLabel">Модель:</string>
    <string name="brandLabel">Марка:</string>
    <string name="serialNumberLabel">Серийный номер:</string>
    <string name="voltageLabel">Напряжение в сети В</string>
    <string name="grounding">Заземление</string>
    <string name="stabilizer">Стабилизатор</string>
    <string name="dielectric_coupling">Диэлектрическая муфта</string>
    <string name="inletGasPressureLabel">Давление газа на входе</string>
    <string name="minGasLabel">Минимум газа на котле</string>
    <string name="maxGasLabel">Максимум газа на котле</string>
    <string name="CoLabel">CO ппм</string>
    <string name="Co2Label">CO2 %</string>
    <string name="performedWorkHint">Проделанные работы</string>
    <string name="recommendationsHint">Рекомендации</string>
    <string name="summaryTitle">Расчет</string>
    <string name="summaryWorkLabel">Сумма за работу</string>
    <string name="summaryLabel">Общая сумма</string>
    <string name="summaryForPartsLabel">Стоимость запчастей</string>
    <string name="confirmButtonLabel">Подтвердить</string>
    <string name="acceptPaymentButtonLabel">Оплата картой</string>
    <string name="retrySendPaymentInfo">Повторить</string>
    <string name="photosTitle">Фотографии</string>
    <string name="resultTitle">Результат</string>
    <string name="filesTitle">Файлы</string>
    <string name="request_cancel_reason_hint">Причина</string>
    <string name="cancel_request_confirmation_dialog_title">Подтвердите отказ от заявки</string>
    <string name="request_accepted_message">Заявка принята</string>
    <string name="request_canceled_message">Заявка отменена</string>
    <string name="request_report_successfully_sent_mwssage">Акт успешно отправлен</string>
    <string name="request_type_selector_label">Тип работ</string>
    <string name="map_chooser_title">Выберите навигатор</string>
    <string name="background_work">Приложение работает в фоновом режиме</string>
    <string name="web_chooser_title">Открыть с помощью</string>
    <string name="take_photo">Добавить фото</string>
    <string name="add_file">Добавить файл</string>
    <string name="empty">Отсутствует</string>
    <string name="accept_payment_success">Оплата успешно произведена</string>
    <string name="accept_payment_failed">Не удалось произвести платеж</string>
    <string name="attach_file_error">Не удалось прикрепить файл</string>
    <string name="select_request_type_error_message">Выберите тип работ</string>

    <!--RequestType names-->
    <string-array name="request_types_array">
        <item>Выберите тип работ</item>
        <item>ПНР</item>
        <item>ПНР+Договор</item>
        <item>ГАРАНТИЙНЫЙ ремонт</item>
        <item>ТО платное</item>
        <item>ТО по договору</item>
        <item>Бесплатный выезд по договору</item>
        <item>Платный выезд по договору</item>
        <item>Разовый выезд Платный</item>
        <item>Повторный выезд бесплатный</item>
        <item>Заключение договора</item>
        <item>Монтаж</item>
        <item>ОТМЕНА ЗАЯВКИ</item>
    </string-array>
</resources>
