<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_menu_map" />
        <item
            android:id="@+id/nav_accepted_requests"
            android:icon="@drawable/ic_playlist_play_black_24dp"
            android:title="@string/nav_menu_in_work" />
        <item
            android:id="@+id/nav_instructions"
            android:icon="@drawable/ic_live_help_black_24dp"
            android:title="@string/nav_instructions" />
    </group>

    <group>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_menu_exit" />
    </group>

</menu>
