<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/urlBadge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/red_border"
        android:paddingStart="6dp"
        android:paddingTop="4dp"
        android:paddingEnd="6dp"
        android:paddingBottom="4dp"
        android:text="@string/laclimat_ru"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@id/appTitle"
        app:layout_constraintRight_toRightOf="@id/appTitle"
        app:layout_constraintTop_toBottomOf="@id/appTitle" />

    <ImageView
        android:id="@+id/phoneIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_local_phone_black_24dp"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/phoneInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/phoneInputLayout"
        app:layout_constraintTop_toTopOf="@id/phoneInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:layout_constraintLeft_toRightOf="@id/phoneIcon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/urlBadge">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/phone"
            android:maxLength="12" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/passwordIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_vpn_key_black_24dp"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/passwordInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/phoneInputLayout"
        app:layout_constraintTop_toTopOf="@id/passwordInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:endIconMode="password_toggle"
        app:layout_constraintLeft_toRightOf="@id/passwordIcon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>